--- a/Bhraman/page2.css
+++ b/Bhraman/page2.css
@@ -1,6 +1,6 @@
 #page2 {
     width: 100vw;
-    height: 80vh;
+    height: 40rem;
     background-color: rgb(0, 0, 0);
     position: relative;
     display: flex;
@@ -14,7 +14,7 @@
     font-weight: 800;
     background: linear-gradient(180deg in hsl shorter hue, rgb(255, 255, 255), rgb(121, 120, 120));
     -webkit-text-fill-color: transparent;
-    background-clip: text;
+    -webkit-background-clip: text;
 }
 
 #page2 h5 {
@@ -27,7 +27,7 @@
 #info-container {
     width: 800px;
     height: 50vh;
-    margin-top: 18vh;
+    margin-top: 10rem;
     display: flex;
     gap: 2vw;
 }
@@ -40,7 +40,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 6vh;
+    gap: 3rem;
 }
 .info-cards:hover{
     background-color: rgb(255, 0, 0);
