--- a/Bhraman/page3.css
+++ b/Bhraman/page3.css
@@ -1,6 +1,6 @@
 #page3{
     width: 100%;
-    height: 56vh;
+    height: 28rem;
     background-image:url('https://images.unsplash.com/photo-1493673272479-a20888bcee10?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-size: cover;
     background-position: center center;
@@ -28,9 +28,9 @@
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.87), rgba(78, 78, 78, 0.2));
 }
 .login input {
-    height: 6.6vh;
+    height: 2rem;
     width: 380px;
-    padding: 0.6vh 1.3vw;
+    padding: 1rem 1.5rem;
     border: 0.3px solid rgba(255, 255, 255, 0.389);
     border-radius: 5px;
     background-color: rgba(25, 25, 25, 0.554);
@@ -39,6 +39,21 @@
 }
 .login .name{
     width: 250px;
+    color: aliceblue;
+}
+@media screen and (max-width:940px){
+    .login{
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+    }
+    .login .name{
+        width: 380px;
+    }
+    .login button{
+        margin: 0 auto;
+    }
+    
 }
 .login button {
     width: 170px;
