--- a/Bhraman/scroller.css
+++ b/Bhraman/scroller.css
@@ -13,7 +13,7 @@
 
 #page1 {
     width: 100vw;
-    height: 60vh;
+    max-height: 28rem;
     /* background: linear-gradient(185deg in hsl shorter hue, rgb(49, 49, 49), rgb(0, 0, 0)); */
     /* background: linear-gradient(11deg in hsl shorter hue, rgb(0, 0, 0), rgb(180, 67, 255)); */
     background-color: rgb(0, 0, 0);
@@ -30,10 +30,15 @@ h2 {
     top: 0;
     font-weight: 800;
 }
+@media screen and (max-width:860px) {
+    #page1 h2{
+        font-size: 40px;
+    }
+}
 .h2-color {
     background: linear-gradient(90deg in hsl shorter hue, rgb(248, 87, 29), rgb(24, 250, 24));
     -webkit-text-fill-color: transparent;
-    background-clip: text;
+    -webkit-background-clip: text;
 }
 
 body::-webkit-scrollbar {
@@ -171,13 +176,12 @@ body::-webkit-scrollbar-thumb {
 }
 
 .scroller {
-    margin-top: 11vh;
+    margin-top: 7rem;
     max-width: 100vw;
     
 }
 
 .scroller__inner {
-    
     padding-block: 1rem;
     display: flex;
     flex-wrap: wrap;
